--- a/readMe
+++ b/readMe
@@ -25,7 +25,7 @@ File handling and byte-level XOR logic
 2. Run the script:
    python encryptor.py
 3. In the GUI:
-Click "Encrypt"
+Click "Encrypt/Decrypt"
 Choose your image file
 Enter a numeric key
 The image will be encrypted or decrypted (depending on its current state)
